--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Candrivemanagement</title>
+  <title>Can Drive Managment System</title>
   <meta name="description" content="Charlotte United Christian Academy Can Drive Management System">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,16 +22,16 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Candrivemanagement</h1>
+      <h1 class="title">Can Drive Managment System</h1>
     </header>
     <div id="container">
-      <p class="tagline">Charlotte United Christian Academy Can Drive Management System</p>
+      <p class="tagline">Manage your Can Drive with ease!</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
           <a href="https://github.com/CUCAWarriors/CanDriveManagement/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/CUCAWarriors/CanDriveManagement/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/CUCAWarriors/CanDriveManagement" class="code">View Candrivemanagement on GitHub</a>
+          <a href="https://github.com/CUCAWarriors/CanDriveManagement" class="code">View CanDriveManagment on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -39,7 +39,7 @@
           <h1>
 <a id="candrivemanagement" class="anchor" href="#candrivemanagement" aria-hidden="true"><span class="octicon octicon-link"></span></a>CanDriveManagement</h1>
 
-<p>Charlotte United Christian Academy Can Drive Management System</p>
+<p>The project was created to help the Knights of the Orange Shield manage their can drive and track people who owe cans!</p>
         </article>
       </div>
     </div>
